--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="sketch.js"></script>
-    <script src="adadaGeometry.js"></script>
+    <script src="./effects/geometry.js"></script>
 
 </body>
 
