--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ia Teaser Image Generator</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <title>ia Topic Image Generator</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,16 +54,23 @@
     <link rel="icon" sizes="192x192" href="favicon/favicon-192.png">
 
 
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet">
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet">
     <link href="https://select2.github.io/select2-bootstrap-theme/css/select2-bootstrap.css" rel="stylesheet">
     <link href="https://maper77.github.io/Select2-Google-Fonts/src/selectGfont.min.css" rel="stylesheet">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
-    <script src="https://maper77.github.io/Select2-Google-Fonts/src/selectGfont.min.js"></script>
+    <script src="https://maper77.github.io/Select2-Google-Fonts/src/selectGfont.min.js"></script> -->
+
+    <link href="./css/select2-bootstrap.css" rel="stylesheet">
+    <link href="./css/select2.min.css" rel="stylesheet">
+    <link href="./css/selectGfont.min.css" rel="stylesheet">
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/select2.min.js"></script>
+    <script src="./js/selectGfont.min.js"></script>
+    <script src="./js/webfontloader.js"></script>
 
 
 
@@ -75,13 +78,6 @@
 
 <body>
     <div class="container-sm">
-        <!-- <div class="row justify-content-md-center mt-4">
-            <div class="col-12">
-                <p class="display-6">ADADA Background Generator </p>
-            </div>
-
-        </div> -->
-
         <div class="row mt-5 mb-3" id="canvas">
             <div class="col-12">
                 <div class="input-group-apend" id="container">
@@ -89,8 +85,6 @@
                 </div>
             </div>
         </div>
-
-
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -152,7 +146,7 @@
                     <input type="checkbox" class="btn-check" id="button_curved" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="button_curved">Curved</label>
                     <button class="btn btn-outline-secondary" type="button" id='button_repattern'>Re-Pattern</button>
-                    <button class="btn btn-outline-secondary" type="button" id="button_download">Download <svg
+                    <button class="btn btn-outline-dark" type="button" id="button_download">Download <svg
                             xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-download" viewBox="0 0 16 16">
                             <path
@@ -181,36 +175,11 @@
         </div>
 
 
-
-
+        <hr>
+        <footer class="text-center">
+            &copy;2022 Tetsuaki BABA
+        </footer>
     </div>
-
-
-    </div>
-
-
-    <!-- <footer class="footer  text-muted">
-        <div class="container-fluid">
-            <div class="row text-center">
-                <div class="col-12">
-                    <a href="https://github.com/TetsuakiBaba/ADADACUMULUS2020BackgroundGenerator">Github</a>, thanks
-                    for
-                    your feedback in advance.
-                </div>
-            </div>
-            <div class="row justify-content-center text-center">
-                <div class="col-12 col-md-12">
-                    ADADA+CUMULUS International Conference Virtual Background
-                    Generator<br>2021 &copy; <a href="https://tetsuakibaba.jp">Tetsuaki Baba</a> all rights
-                    reserved.
-                </div>
-            </div>
-        </div>
-    </footer> -->
-
-
-
-
 
 
 
@@ -219,7 +188,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    <script src="./js/p5.min.js"></script>
     <script src="sketch.js"></script>
     <script src="./effects/geometry.js"></script>
 
