--- a/index.html
+++ b/index.html
@@ -53,16 +53,6 @@
     <link rel="manifest" href="favicon/manifest.json">
     <link rel="icon" sizes="192x192" href="favicon/favicon-192.png">
 
-
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet">
-    <link href="https://select2.github.io/select2-bootstrap-theme/css/select2-bootstrap.css" rel="stylesheet">
-    <link href="https://maper77.github.io/Select2-Google-Fonts/src/selectGfont.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
-    <script src="https://maper77.github.io/Select2-Google-Fonts/src/selectGfont.min.js"></script> -->
-
     <link href="./css/select2-bootstrap.css" rel="stylesheet">
     <link href="./css/select2.min.css" rel="stylesheet">
     <link href="./css/selectGfont.min.css" rel="stylesheet">
@@ -77,14 +67,9 @@
 </head>
 
 <body>
-    <div class="container-sm">
-        <div class="row mt-5 mb-3" id="canvas">
-            <div class="col-12">
-                <div class="input-group-apend" id="container">
-                    <div id="sketch-holder"></div>
-                </div>
-            </div>
-        </div>
+
+    <div id="sketch-holder"></div>
+    <div class="container-sm mt-4">
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -155,6 +140,11 @@
                                 d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
                         </svg>
                     </button>
+                </div>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+                        aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Copy</button>
                 </div>
             </div>
 
