OBSでの使い勝手向上。キャンバスクリックでキャンバス小さくなる

--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
     <script src="./js/selectGfont.min.js"></script>
     <script src="./js/webfontloader.js"></script>
 
-
-
 </head>
 
 <body>
 
-    <div id="sketch-holder"></div>
+    <div id="sketch-holder" class="text-center size_move" onclick="minimizeCanvas();"></div>
     <div class="container-sm mt-4">
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -140,11 +138,6 @@
                                 d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
                         </svg>
                     </button>
-                </div>
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
-                        aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Copy</button>
                 </div>
             </div>
 
