added manual text and gif

--- a/index.html
+++ b/index.html
@@ -147,10 +147,20 @@
             </div>
 
             <div class="tab-pane fade mt-3" id="about" role="tabpanel" aria-labelledby="about-tab">
+                <img src="./teaser.gif" width="100%">
                 <p>ia Teaser Image Generator is created by <a href="https://tetsuakibaba.jp">Tetsuaki Baba</a>. This
                     code can be viewed on github. If you have
                     any
                     modifications, please contact me directly via github. Thanks for your contribution in advance.
+                </p>
+                <p>
+                    URI Parameter:
+                <ul>
+                    <li>title</li>
+                    <li>abstract</li>
+                </ul>
+                sample: <a href="https://tetsuakibaba.github.io/iaTopicImageGenerator/?title=hello&abstract=world"
+                    target="_blank">https://tetsuakibaba.github.io/iaTopicImageGenerator/?title=hello&abstract=world</a>
                 </p>
                 <p>2021 &copy; <a href="https://tetsuakibaba.jp">Tetsuaki Baba</a> all rights
                     reserved.</p>
