added sakura color scheme

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         <option value="#1F1F1F, #595959, #8C8C8C, #D9D9D9, #F5F5F5" selected>ia dark</option>
                         <option value="#F5F5F5, #D9D9D9, #8C8C8C, #595959, #1F1F1F">ia light</option>
                         <option value="#F25CAF,#F4467B,#F8E80C,#8CBF86,#2981C0">holiday</option>
+                        <option value="#BF6F9B,#BF93B0,#A65858,#F2F2F2">sakura</option>
                     </select>
                     <input type="checkbox" class="btn-check" id="button_curved" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="button_curved">Curved</label>
