--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
                 </div>
                 <div class="input-group mt-3 mb-3">
                     <span class="input-group-text" id="basic-addon1">Geoemtry (0-20)</span>
-                    <input type="number" class="form-control" value=5 min=0 max=20 id="number_geometry">
+                    <input type="number" class="form-control" value=3 min=0 max=20 id="number_geometry">
                     <span class="input-group-text" for="inputGroupSelect01">Color Scheme</span>
                     <select class="form-select" id="select_color_scheme">
                         <option value="#1F1F1F, #595959, #8C8C8C, #D9D9D9, #F5F5F5" selected>ia dark</option>
                         <option value="#F5F5F5, #D9D9D9, #8C8C8C, #595959, #1F1F1F">ia light</option>
                         <option value="#F25CAF,#F4467B,#F8E80C,#8CBF86,#2981C0">holiday</option>
                         <option value="#BF6F9B,#BF93B0,#A65858,#F2F2F2">sakura</option>
+                        <option value="#2E62A6,#2E6EA6,#F2CE16,#D9B814">no war</option>
+                        <option value="#4366ae,#6d97cf,#000000,#FFFFFF">TMU</option>
                     </select>
                     <input type="checkbox" class="btn-check" id="button_curved" autocomplete="off">
                     <label class="btn btn-outline-secondary" for="button_curved">Curved</label>
@@ -182,7 +184,10 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
 
-    <script src="./js/p5.min.js"></script>
+    <!-- <script src="./js/p5.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
+    <!-- insert after p5.js -->
+    <script src="https://cdn.jsdelivr.net/npm/p5.capture@1.1.1/dist/p5.capture.umd.min.js"></script>
     <script src="sketch.js"></script>
     <script src="./effects/geometry.js"></script>
 
