--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                         <option value="#F25CAF,#F4467B,#F8E80C,#8CBF86,#2981C0">holiday</option>
                         <option value="#BF6F9B,#BF93B0,#A65858,#F2F2F2">sakura</option>
                         <option value="#2E62A6,#2E6EA6,#F2CE16,#D9B814">no war</option>
+                        <option value="#26BBD6,#30BA8C,#FAB51C,#F55877">colorful</option>
                         <option value="#4366ae,#6d97cf,#000000,#FFFFFF">TMU</option>
                     </select>
                     <input type="checkbox" class="btn-check" id="button_curved" autocomplete="off">
@@ -187,7 +188,7 @@
     <!-- <script src="./js/p5.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
     <!-- insert after p5.js -->
-    <script src="https://cdn.jsdelivr.net/npm/p5.capture@1.1.1/dist/p5.capture.umd.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture@1.1.1/dist/p5.capture.umd.min.js"></script> -->
     <script src="sketch.js"></script>
     <script src="./effects/geometry.js"></script>
 
